# CarBoN

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  data.json  db.sqlite3  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml  superuser_creation.py
.devcontainer/: devcontainer.json
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_15c4a824ab2728a3_admin_py.html  z_15c4a824ab2728a3_apps_py.html  z_15c4a824ab2728a3_forms_py.html  z_15c4a824ab2728a3_models_py.html  z_15c4a824ab2728a3_urls_py.html  z_15c4a824ab2728a3_utils_py.html  z_15c4a824ab2728a3_views_py.html  z_7ffa7c9a80f95eb2_settings_py.html  z_7ffa7c9a80f95eb2_urls_py.html  z_db4e57c26edd20ca_0001_initial_py.html  z_db4e57c26edd20ca_0002_defect_reporter_name_alter_defect_solution_date_and_more_py.html  z_db4e57c26edd20ca_0003_alter_defect_reporter_name_alter_vehicle_type_py.html  z_db4e57c26edd20ca_0004_vehicle_mileage_trip_py.html  z_db4e57c26edd20ca_0005_rename_carburant_vehicle_fuel_and_more_py.html  z_db4e57c26edd20ca_0006_fuelexpense_py.html  z_db4e57c26edd20ca_0007_alter_fuelexpense_options_alter_fuelexpense_vehicle_py.html  z_db4e57c26edd20ca_0008_alter_location_options_alter_fuelexpense_amount_and_more_py.html  z_db4e57c26edd20ca_0009_alter_vehicle_parking_location_py.html  z_db4e57c26edd20ca_0010_setting_py.html  z_db4e57c26edd20ca_0010_vehicle_inventory_py.html  z_db4e57c26edd20ca_0011_merge_0010_setting_0010_vehicle_inventory_py.html  z_db4e57c26edd20ca_0015_defect_severity_py.html  (+7 more)
(+58 files in other folders)
