[tool.poetry]
package-mode = false
name = "carbon"
version = "0.1.0"
description = ""
authors = ["GPL-3.0-or-later"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.14"
django = "^5.2.8"
django-qr-code = "^4.1.0"
typing-extensions = "^4.12.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.3.0"
coverage = "^7.10.7"

[tool.coverage.run]
relative_files = true
omit = [
    "manage.py"
]